<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Decoration</string>
    //登录界面
    <string name="login">"登录"</string>
    //注册界面
    <string name="regist">"注册"</string>
    <string name="user_nick_hint">"请输入您的昵称"</string>
    <string name="msg_resend_time">"36秒后重新获取"</string>
    <string name="input_phonr_num_hint">"请输入手机号"</string>
    <string name="regist_msg_code_hint">"请输入收到的验证码"</string>
    <string name="regist_pwd_hint">"请输入密码"</string>

    //首页
    <string name="find_designer">"找设计师"</string>
    <string name="find_manager">"找主管"</string>
    <string name="find_supervisor">"找监理"</string>
    <string name="find_material">"找材料"</string>
    <string name="fix_home">"房医生"</string>
    <string name="design_pics">"效果图"</string>
    <string name="decoration_university">"装修大学"</string>
    <string name="entertainment">"休闲娱乐"</string>
    <string name="popular_brand">"热门品牌"</string>
    <string name="renderings">"效果图"</string>
    <string name="read_more">"查看更多"</string>

    //找设计师
    <string name="find_designer_title">"找设计师"</string>

    //我的收藏
    <string name="my_collection_title">"我的收藏"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decoration_strategy">装修攻略</string>
    <string name="test">便宜的护墙板多少钱一个平方，护墙板的作用以及安装方法，中式家装在年轻人中越来越流行，如何装出自己喜欢的现代中式，请看璇睿智佳装饰，为您提供最优质的服务</string>
    <string name="test_date">03-17</string>
    <string name="area_pattern">%s㎡/%s</string>
    <string name="service_area">服务区域</string>
    <string name="designer_rank">设计师等级</string>
    <string name="favorable_rate">好评率</string>
    <string name="defaultSort">默认排序</string>
</resources>
