<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/conditions_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/service_area_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/service_area_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/service_area"
                android:textColor="@color/blod_black_text_color"
                android:textSize="14sp"/>

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/service_area_tv"
                android:src="@drawable/drop_down_menu_unselect_ic"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/designer_rank_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/designer_rank_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/designer_rank"
                android:textColor="@color/blod_black_text_color"
                android:textSize="14sp"/>

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/designer_rank_tv"
                android:src="@drawable/drop_down_menu_unselect_ic"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/faverable_rate_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/favorable_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/favorable_rate"
                android:textColor="@color/blod_black_text_color"
                android:textSize="14sp"/>

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/favorable_rate_tv"
                android:src="@drawable/drop_down_menu_unselect_ic"/>


        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/bottom_divider"
        style="@style/DeepUnderLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
